k8s/radarr/resources/radarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:5.18.4@sha256:59be618047f755c3f39acd5638229fcc6605bbf47b548a66ad1b6a81478e7847
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 200M
            limits:
              memory: 500M
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: ripping-storage
              mountPath: /output
            - name: config-volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
          ports:
            - name: web
              containerPort: 7878

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
